--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,13 +6,24 @@
     <title>Weather</title>
     <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
-    <script> src="/js/app.js"</script>
 </head>
 
 <body>
     <div class='main-content'>
         {{>header}}
         <P>Weather site</P>
+
+        <form>
+            <input placeholder="Location">
+            <button>Search</button>
+        </form>
+
+        <p
+            id="message-1"></p>
+        <p id="message-2">
+        </p>
+
+        <script src="/js/app.js"></script>
     </div>
 
 {{>footer}}
